# wizardenv

./: README.md  pyproject.toml  setup.py  wizardai.py
.github/workflows/: publish.yml
wizardai/: core.py  memory.py  speech.py
