[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wizardenv"
version = "1.1.0"
authors = [
  { name = "WizardAI Contributors" }
]
description = "A powerful AI SDK with vision, speech, and multi-backend support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "requests>=2.28.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
vision = [
    "opencv-python>=4.7.0",
    "numpy>=1.24.0",
]
speech = [
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "gtts>=2.3.0",
    "pygame>=2.4.0",
]
whisper = [
    "openai-whisper>=20230918",
]
full = [
    "opencv-python>=4.7.0",
    "numpy>=1.24.0",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "gtts>=2.3.0",
    "pygame>=2.4.0",
    "openai-whisper>=20230918",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "twine>=4.0",
    "build>=0.10",
]

[project.urls]
Homepage = "https://github.com/VIkasPatel22/wizardenv"

[tool.setuptools.packages.find]
where = ["."]
include = ["wizardai*"]
